packages/dart_blurhash_ffi/lib/src/bindings.g.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;

@ffi.Native<
  WrappedEncodeResult Function(
    ffi.Uint32,
    ffi.Uint32,
    ffi.Pointer<ffi.Uint8>,
    ffi.Uint32,
  )
>()
external WrappedEncodeResult blurhash_encode(
  int components_x,
  int components_y,
  ffi.Pointer<ffi.Uint8> rgba_image,
  int rgba_image_len,
);

@ffi.Native<
  WrappedDecodeResult Function(
    ffi.Pointer<ffi.Uint8>,
    ffi.Uint32,
    ffi.Uint32,
    ffi.Uint32,
    ffi.Float,
  )
>()
external WrappedDecodeResult blurhash_decode(
  ffi.Pointer<ffi.Uint8> blurhash,
  int blurhash_len,
  int width,
  int height,
  double punch,
);

@ffi.Native<ffi.Bool Function(ffi.Pointer<ffi.Uint8>, ffi.Uint32)>()
external bool blurhash_is_valid(
  ffi.Pointer<ffi.Uint8> blurhash,
  int blurhash_len,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Char>)>()
external void blurhash_free_string(ffi.Pointer<ffi.Char> ptr);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Uint8>, ffi.Uint32)>()
external void blurhash_free_bytes(ffi.Pointer<ffi.Uint8> ptr, int len);

final class WrappedEncodeResult extends ffi.Struct {
  @ffi.Bool()
  external bool success;

  external ffi.Pointer<ffi.Char> data;

  external ffi.Pointer<ffi.Char> error_message;
}

final class WrappedDecodeResult extends ffi.Struct {
  @ffi.Bool()
  external bool success;

  external ffi.Pointer<ffi.Uint8> data;

  external ffi.Pointer<ffi.Char> error_message;
}
